@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-07-21T00:58:14Z",
+  "timestamp" : "2023-07-21T08:12:35Z",
   "count_outdated" : 2598,
   "uniques_outdated" : 984,
-  "count" : 2624,
-  "uniques" : 998,
+  "count" : 2625,
+  "uniques" : 999,
   "clones" : [
     {
       "timestamp": "2023-07-08T00:00:00Z",
@@ -115,6 +115,15 @@
     },
     {
       "timestamp": "2023-07-20T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-07-21T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
