@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 2,
   "clones": [
     {
@@ -64,6 +64,11 @@
     },
     {
       "timestamp": "2023-07-20T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-07-21T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
